# DeT

./: .gitignore  CMakeLists.txt  README.md
src/: DeT.cpp  DeT.h  DeT.hpp  Geometry.hpp  main.cpp  script.txt
